--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <aside class="bg-dark" id="kontak">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Daftarkan Diri Anda Segera</h2>
@@ -231,7 +231,7 @@
         </div>
     </aside>
 
-    <section id="kontak">
+    <section>
         <div class="container">
             <div class="row">
 			
