--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
 		
 		<p>
 			<ul>
-				<li>11 NOPEMBER 2017 : BATAS AKHIR PENGIRIMAN FULL PAPER</li>
-				<li>25 NOPEMBER 2017 : BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</li>
-				<li><b>16 DESEMBER 2017 JAM 08.00 : PELAKSANAAN SNETO 2017</b></li>
+				<li>11 NOPEMBER 2017[<div data-countdown="2017/10/11"></div>] : BATAS AKHIR PENGIRIMAN FULL PAPER</li>
+				<li>25 NOPEMBER 2017 [<div data-countdown="2017/10/25"></div>]: BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</li>
+				<li><b>16 DESEMBER 2017 JAM 08.00 [<div data-countdown="2017/12/16 08:00:00"></div>]: PELAKSANAAN SNETO 2017</b></li>
 			</ul>
 		</p>
     </div>
@@ -425,8 +425,12 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 	
-	<!-- Plugin JavaScript -->
+    <!-- Plugin JavaScript -->
     <script src="vendor/fancybox/dist/jquery.fancybox.min.js"></script>
+    
+    <!-- jQuery.countdown -->
+    <script src="vendor/jQuery.countdown/dist/jquery.countdown.js"></script>
+ 
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
@@ -445,6 +449,12 @@
 		  title: 'Hello World!'
 		});
 	  }
+	$('[data-countdown]').each(function() {
+	  var $this = $(this), finalDate = $(this).data('countdown');
+	  $this.countdown(finalDate, function(event) {
+	    $this.html(event.strftime('%D days %H:%M:%S'));
+	  });
+	});
 	</script>
 	<script async defer
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmW0N4DxQbC1G0I1L9Um82FaeJbz5POOU&callback=initMap">
