--- a/index.html
+++ b/index.html
@@ -383,9 +383,15 @@
 		
 		<p>
 			<ul>
-				<li>11 NOPEMBER 2017[<div data-countdown="2017/10/11"></div>] : BATAS AKHIR PENGIRIMAN FULL PAPER</li>
-				<li>25 NOPEMBER 2017 [<div data-countdown="2017/10/25"></div>]: BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</li>
-				<li><b>16 DESEMBER 2017 JAM 08.00 [<div data-countdown="2017/12/16 08:00:00"></div>]: PELAKSANAAN SNETO 2017</b></li>
+				<li>11 NOPEMBER 2017[<div data-countdown="2017/10/11"></div>]
+			  		<span>BATAS AKHIR PENGIRIMAN FULL PAPER</span>
+				</li>
+				<li>25 NOPEMBER 2017 [<div data-countdown="2017/10/25"></div>]
+					<span>BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</span>
+				</li>
+				<li><b>16 DESEMBER 2017 JAM 08.00 [<div data-countdown="2017/12/16 08:00:00"></div>]
+					<span>PELAKSANAAN SNETO 2017</div>
+				</b></li>
 			</ul>
 		</p>
     </div>
