--- a/index.html
+++ b/index.html
@@ -383,14 +383,14 @@
 		
 		<p>
 			<ul>
-				<li>11 NOPEMBER 2017[<div data-countdown="2017/10/11"></div>]
+				<li>11 NOPEMBER 2017<span style="color: #dfdfdf;">[<div data-countdown="2017/10/11"></div>]</span>
 			  		<span>BATAS AKHIR PENGIRIMAN FULL PAPER</span>
 				</li>
-				<li>25 NOPEMBER 2017 [<div data-countdown="2017/10/25"></div>]
+				<li>25 NOPEMBER 2017<span style="color: #dfdfdf;">[<div data-countdown="2017/10/25"></div>]</span>
 					<span>BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</span>
 				</li>
-				<li><b>16 DESEMBER 2017 JAM 08.00 [<div data-countdown="2017/12/16 08:00:00"></div>]
-					<span>PELAKSANAAN SNETO 2017</div>
+				<li><b>16 DESEMBER 2017 JAM 08.00<span style="color: #dfdfdf;">[<div data-countdown="2017/12/16 08:00:00"></div>]</span>
+					<span>PELAKSANAAN SNETO 2017</span>
 				</b></li>
 			</ul>
 		</p>
