div to span hahahahaha

--- a/index.html
+++ b/index.html
@@ -383,13 +383,13 @@
 		
 		<p>
 			<ul>
-				<li>11 NOPEMBER 2017<span style="color: #999999;">[<div data-countdown="2017/10/11"></div>]</span><br/>
+				<li>11 NOPEMBER 2017<span style="color: #999999;">[<span data-countdown="2017/10/11"></span>]</span><br/>
 			  		<span>BATAS AKHIR PENGIRIMAN FULL PAPER</span>
 				</li>
-				<li>25 NOPEMBER 2017<span style="color: #999999;">[<div data-countdown="2017/10/25"></div>]</span><br/>
+				<li>25 NOPEMBER 2017<span style="color: #999999;">[<span data-countdown="2017/10/25"></span>]</span><br/>
 					<span>BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</span>
 				</li>
-				<li><b>16 DESEMBER 2017 JAM 08.00<span style="color: #999999;">[<div data-countdown="2017/12/16 08:00:00"></div>]</span><br/>
+				<li><b>16 DESEMBER 2017 JAM 08.00<span style="color: #999999;">[<span data-countdown="2017/12/16 08:00:00"></span>]</span><br/>
 					<span>PELAKSANAAN SNETO 2017</span>
 				</b></li>
 			</ul>
