--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 	$('[data-countdown]').each(function() {
 	  var $this = $(this), finalDate = $(this).data('countdown');
 	  $this.countdown(finalDate, function(event) {
-	    $this.html(event.strftime('%D days %H:%M:%S'));
+	    $this.html(event.strftime('%D Hari %H:%M:%S'));
 	  });
 	});
 	</script>
