--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Daftarkan Diri Anda Segera</h2>
-                <a href="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" download="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" class="btn btn-default btn-xl sr-button" data-toggle="tooltip" title="Kirim hasil scan ke alamat email korespondensi"><i class="fa fa-file-text-o text-primary sr-icons"></i> Download Formulinya</a>
+                <a href="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" download="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" class="btn btn-default btn-xl sr-button" data-toggle="tooltip" title="Kirim hasil scan ke alamat email korespondensi"><i class="fa fa-file-text-o text-primary sr-icons"></i> Download Formulirnya</a>
 				<br/><br/>
 				<a href="downloadable/template_abstrak_SNETO_2017.doc" download="downloadable/template_abstrak_SNETO_2017.doc" class="btn btn-default btn-l sr-button"><i class="fa fa-file-word-o text-primary sr-icons"></i> Template Abstrak</a> <a href="downloadable/template_full_paper_SNETO_2017.doc" download="downloadable/template_full_paper_SNETO_2017.doc" class="btn btn-default btn-l sr-button"><i class="fa fa-file-word-o text-primary sr-icons"></i> Template Full Paper</a>
             </div>
@@ -236,7 +236,7 @@
             <div class="row">
 			
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Korespondensi</h2>
+                    <h2 class="section-heading">Korespodensi</h2>
                     <hr class="primary">
                     <p>Panitia SNETO 2017 Jurusan Teknik Elektro ITENAS Bandung Jln. PHH Mustofa 23 Bandung</p>
                 </div>
