--- a/index.html
+++ b/index.html
@@ -238,8 +238,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Korespodensi</h2>
                     <hr class="primary">
-			<p>Panitia SNETO 2017 Jurusan Teknik Elektro ITENAS Bandung
-		    	Jln. PHH Mustofa 23 Bandung</p>
+			<p>Panitia SNETO 2017 Jurusan Teknik Elektro ITENAS Bandung</p>
+		    	<br/>
+			<p>Jln. PHH Mustofa 23 Bandung</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
