--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Apa sih SNETO itu?</h2>
+                    <h2 class="section-heading">Apakah SNETO itu?</h2>
                     <hr class="light">
-                    <p class="text-faded">SNETO merupakan singkatan dari Seminar Nasional Energi Telekomunikasi dan Otomasi merupakan kegiatan tahunan yang diselenggarakan oleh <a class="color-white" href="http://itenas.ac.id/" data-toggle="tooltip" title="Institut Teknologi Nasional" target="_blank">ITENAS</a> khususnya oleh Jurusan Teknik Elektro bersama dengan <a class="color-white" href="http://www.mitsubishielectric.co.id/" data-toggle="tooltip" title="PT.Mitsubishi Electric Indonesia" target="_blank">Mitsubishi Electric</a>. 
+                    <p class="text-faded">SNETO merupakan singkatan dari Seminar Nasional Energi Telekomunikasi dan Otomasi merupakan kegiatan tahunan yang diselenggarakan oleh <a class="color-white" href="http://itenas.ac.id/" data-toggle="tooltip" title="Institut Teknologi Nasional" target="_blank">ITENAS</a> khususnya oleh Jurusan Teknik Elektro bersama dengan <a class="color-white" href="http://www.mitsubishielectric.co.id/" data-toggle="tooltip" title="PT.Mitsubishi Electric Indonesia" target="_blank">PT.Mitsubishi Electric Indonesia</a>. 
 					Pada kesempatan kali ini akan bertemakan tentang "Perkembangan Teknologi Sistem Otomasi dan Telekomunikasi dalam Menunjang Pembangunan Energi Baru"
-					yang bertujuan untuk membahas eksploitasi dan optimalisasi Energi Baru seperti Air, Udara, dan Nuklir.
-					karena saat ini masih banyak industri yang menggunakan energi berbahan fosil yang ketersediaannya terbatas.</p>
-                    <a href="#acara" class="page-scroll btn btn-default btn-xl sr-button">gimana detail Seminarnya?</a> <a href="downloadable/POSTER_SNETO2017.pdf" download="downloadable/POSTER_SNETO2017.pdf" class="btn btn-default btn-xl sr-button" target="_blank"><i class="fa fa-download text-primary sr-icons"></i> download poster</a>
+					yang bertujuan untuk membahas eksploitasi dan optimalisai Energi Baru seperti Air, Udara, dan Nuklir.
+					Dikarenakan saat ini masih banyak industri yang menggunakan energi berbahan fosil yang ketersediaannya terbatas.</p>
+                    <a href="#acara" class="page-scroll btn btn-default btn-xl sr-button">bagaimana detail Seminarnya?</a> <a href="downloadable/POSTER_SNETO2017.pdf" download="downloadable/POSTER_SNETO2017.pdf" class="btn btn-default btn-xl sr-button" target="_blank"><i class="fa fa-download text-primary sr-icons"></i> download poster</a>
                 </div>
             </div>
         </div>
@@ -187,59 +187,59 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/sneto2015/p06.jpg" class="portfolio-box">
-                        <img src="img/sneto2015/p06.jpg" class="img-responsive" alt="">
+                    <a href="img/sneto2015/p06-min.jpg" class="portfolio-box">
+                        <img src="img/sneto2015/p06-min.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/sneto2015/p13.jpg" class="portfolio-box">
-                        <img src="img/sneto2015/p13.jpg" class="img-responsive" alt="">
+                    <a href="img/sneto2015/p13-min.jpg" class="portfolio-box">
+                        <img src="img/sneto2015/p13-min.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/sneto2015/p09.jpg" class="portfolio-box">
-                        <img src="img/sneto2015/p09.jpg" class="img-responsive" alt="">
+                    <a href="img/sneto2015/p09-min.jpg" class="portfolio-box">
+                        <img src="img/sneto2015/p09-min.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/otomasi/ot1.jpg" class="portfolio-box">
-                        <img src="img/otomasi/ot1_tmb.jpg" class="img-responsive" alt="">
+                    <a href="img/otomasi/ot11.jpg" class="portfolio-box">
+                        <img src="img/otomasi/ot11_tmb.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/sneto2015/p08.jpg" class="portfolio-box">
-                        <img src="img/sneto2015/p08.jpg" class="img-responsive" alt="">
+                    <a href="img/sneto2015/p08-min.jpg" class="portfolio-box">
+                        <img src="img/sneto2015/p08-min.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/otomasi/ot2.jpg" class="portfolio-box">
-                        <img src="img/otomasi/ot2_tmb.jpg" class="img-responsive" alt="">
+                    <a href="img/otomasi/ot22.jpg" class="portfolio-box">
+                        <img src="img/otomasi/ot22_tmb.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
         </div>
     </section>
 
-    <aside class="bg-dark" id="kontak">
+    <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Daftarkan Diri Anda Segera</h2>
-                <a href="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" download="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" class="btn btn-default btn-xl sr-button" data-toggle="tooltip" title="Kirim hasil scan ke alamat email korespodensi"><i class="fa fa-file-text-o text-primary sr-icons"></i> Download Formulirnya</a>
+                <a href="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" download="downloadable/PENDAFTARAN_DAN_KONFIRMASI_PEMBAYARAN_SEMINAR_NASIONAL_SNETO_2017.doc" class="btn btn-default btn-xl sr-button" data-toggle="tooltip" title="Kirim hasil scan ke alamat email korespondensi"><i class="fa fa-file-text-o text-primary sr-icons"></i> Download Formulinya</a>
 				<br/><br/>
-				<a href="downloadable/template_abstrak_SNETO_2017.doc" download="downloadable/template_abstrak_SNETO_2017.doc" class="btn btn-default btn-l sr-button"><i class="fa fa-file-word-o text-primary sr-icons"></i> Template Abstrak</a> <a href="downloadable/template_full_paper_SNETO_2017.doc" download="downloadable/template_full_paper_SNETO_2017.doc" class="btn btn-default btn-l sr-button"><i class="fa fa-file-word-o text-primary sr-icons"></i> Template Full Paper</a>
+				<a href="downloadable/template_abstrak_SNETO_2017.doc" download="downloadable/template_abstrak_SNETO_2017.doc" class="btn btn-default btn-l sr-button"><i class="fa fa-file-word-o text-primary sr-icons"></i> Template Abstark</a> <a href="downloadable/template_full_paper_SNETO_2017.doc" download="downloadable/template_full_paper_SNETO_2017.doc" class="btn btn-default btn-l sr-button"><i class="fa fa-file-word-o text-primary sr-icons"></i> Template Full Paper</a>
             </div>
         </div>
     </aside>
 
-    <section>
+    <section id="kontak">
         <div class="container">
             <div class="row">
 			
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Korespodensi</h2>
+                    <h2 class="section-heading">Korespondensi</h2>
                     <hr class="primary">
-			<p>Panitia SNETO 2017 Jurusan Teknik Elektro ITENAS Bandung</p>
-			<p>Jln. PHH Mustofa 23 Bandung</p>
+                    <p>Panitia SNETO 2017 Jurusan Teknik Elektro ITENAS Bandung</p> 
+					<p>Jln. PHH Mustofa 23 Bandung</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
@@ -384,15 +384,9 @@
 		
 		<p>
 			<ul>
-				<li>11 NOPEMBER 2017<span style="color: #999999;">[<span data-countdown="2017/10/11"></span>]</span><br/>
-			  		<span>BATAS AKHIR PENGIRIMAN FULL PAPER</span>
-				</li>
-				<li>25 NOPEMBER 2017<span style="color: #999999;">[<span data-countdown="2017/10/25"></span>]</span><br/>
-					<span>BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</span>
-				</li>
-				<li><b>16 DESEMBER 2017 JAM 08.00<span style="color: #999999;">[<span data-countdown="2017/12/16 08:00:00"></span>]</span><br/>
-					<span>PELAKSANAAN SNETO 2017</span>
-				</b></li>
+				<li>11 NOPEMBER 2017 : BATAS AKHIR PENGIRIMAN FULL PAPER</li>
+				<li>25 NOPEMBER 2017 : BATAS AKHIR PEMBAYARAN SNETO 2017 DAN BATAS AKHIR PENGIRIMAN PERBAIKAN FULL PAPER</li>
+				<li><b>16 DESEMBER 2017 JAM 08.00 : PELAKSANAAN SNETO 2017</b></li>
 			</ul>
 		</p>
     </div>
@@ -432,12 +426,8 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 	
-    <!-- Plugin JavaScript -->
+	<!-- Plugin JavaScript -->
     <script src="vendor/fancybox/dist/jquery.fancybox.min.js"></script>
-    
-    <!-- jQuery.countdown -->
-    <script src="vendor/jQuery.countdown/dist/jquery.countdown.js"></script>
- 
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
@@ -456,12 +446,6 @@
 		  title: 'Hello World!'
 		});
 	  }
-	$('[data-countdown]').each(function() {
-	  var $this = $(this), finalDate = $(this).data('countdown');
-	  $this.countdown(finalDate, function(event) {
-	    $this.html(event.strftime('%D Hari %H:%M:%S'));
-	  });
-	});
 	</script>
 	<script async defer
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmW0N4DxQbC1G0I1L9Um82FaeJbz5POOU&callback=initMap">
