--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/otomasi/ot11.jpg" class="portfolio-box">
+                    <a href="img/otomasi/ot11_tmb.jpg" class="portfolio-box">
                         <img src="img/otomasi/ot11_tmb.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
@@ -212,7 +212,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/otomasi/ot22.jpg" class="portfolio-box">
+                    <a href="img/otomasi/ot22_tmb.jpg" class="portfolio-box">
                         <img src="img/otomasi/ot22_tmb.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
