--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <hr class="light">
                     <p class="text-faded">SNETO merupakan singkatan dari Seminar Nasional Energi Telekomunikasi dan Otomasi merupakan kegiatan tahunan yang diselenggarakan oleh <a class="color-white" href="http://itenas.ac.id/" data-toggle="tooltip" title="Institut Teknologi Nasional" target="_blank">ITENAS</a> khususnya oleh Jurusan Teknik Elektro bersama dengan <a class="color-white" href="http://www.mitsubishielectric.co.id/" data-toggle="tooltip" title="PT.Mitsubishi Electric Indonesia" target="_blank">PT.Mitsubishi Electric Indonesia</a>. 
 					Pada kesempatan kali ini akan bertemakan tentang "Perkembangan Teknologi Sistem Otomasi dan Telekomunikasi dalam Menunjang Pembangunan Energi Baru"
-					yang bertujuan untuk membahas eksploitasi dan optimalisai Energi Baru seperti Air, Udara, dan Nuklir.
+					yang bertujuan untuk membahas eksploitasi dan optimalisasi Energi Baru seperti Air, Udara, dan Nuklir.
 					Dikarenakan saat ini masih banyak industri yang menggunakan energi berbahan fosil yang ketersediaannya terbatas.</p>
                     <a href="#acara" class="page-scroll btn btn-default btn-xl sr-button">bagaimana detail Seminarnya?</a> <a href="downloadable/POSTER_SNETO2017.pdf" download="downloadable/POSTER_SNETO2017.pdf" class="btn btn-default btn-xl sr-button" target="_blank"><i class="fa fa-download text-primary sr-icons"></i> download poster</a>
                 </div>
@@ -236,7 +236,7 @@
             <div class="row">
 			
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Korespondensi</h2>
+                    <h2 class="section-heading">Korespodensi</h2>
                     <hr class="primary">
                     <p>Panitia SNETO 2017 Jurusan Teknik Elektro ITENAS Bandung</p> 
 					<p>Jln. PHH Mustofa 23 Bandung</p>
